# voclip

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
install/: README.md  install-linux.sh  install-windows.ps1  install.sh  uninstall-windows.ps1  uninstall.sh
src/: audio_capture.rs  beep.rs  clipboard.rs  config.rs  error.rs  keyboard.rs  main.rs  resample.rs  speech_model.rs  token.rs  ui.rs  update.rs  wakeword.rs  websocket.rs
