[package]
name = "voclip"
version = "0.3.3"
edition = "2024"
description = "Voice to clipboard CLI tool"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
cpal = "0.15"
arboard = "3"
rodio = "0.19"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "2"
url = "2"
futures-util = "0.3"
self_update = "0.43"
dirs-next = "2"
toml = "0.8"
enigo = "0.6"
